--- a/game4.10/game.vcxproj
+++ b/game4.10/game.vcxproj
@@ -229,37 +229,14 @@
     </Bscmake>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <None Include="Res\ball.bmp" />
-    <None Include="RES\bmp0.bmp" />
-    <None Include="RES\bmp1.bmp" />
-    <None Include="RES\bmp10.bmp" />
-    <None Include="RES\bmp2.bmp" />
-    <None Include="RES\bmp3.bmp" />
-    <None Include="RES\bmp4.bmp" />
-    <None Include="RES\bmp5.bmp" />
-    <None Include="RES\bmp6.bmp" />
-    <None Include="RES\bmp7.bmp" />
-    <None Include="RES\bmp8.bmp" />
-    <None Include="RES\bmp9.bmp" />
-    <None Include="RES\center.bmp" />
     <None Include="RES\continue.bmp" />
-    <None Include="Res\corner.bmp" />
-    <None Include="RES\eraser1.bmp" />
-    <None Include="RES\eraser2.bmp" />
-    <None Include="RES\eraser3.bmp" />
-    <None Include="res\game.ico" />
     <None Include="res\game.rc2" />
-    <None Include="RES\gamecurs.cur" />
-    <None Include="res\gameDoc.ico" />
     <None Include="RES\help.bmp" />
     <None Include="RES\loading.bmp" />
-    <None Include="RES\ntutcsie.bmp" />
     <None Include="res\Toolbar.bmp" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Source\audio.cpp" />
-    <ClCompile Include="Source\CBall.cpp" />
-    <ClCompile Include="Source\CBouncingBall.cpp" />
     <ClCompile Include="Source\CEraser.cpp" />
     <ClCompile Include="Source\CGameStateInit.cpp" />
     <ClCompile Include="Source\CGameStateOver.cpp" />
@@ -279,6 +256,7 @@
       <PreprocessorDefinitions Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <PreprocessorDefinitions Condition="'$(Configuration)|$(Platform)'=='UnitTest|Win32'">%(PreprocessorDefinitions)</PreprocessorDefinitions>
     </ClCompile>
+    <ClCompile Include="Source\InitalPageMenu.cpp" />
     <ClCompile Include="Source\MainFrm.cpp">
       <PreprocessorDefinitions Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <PreprocessorDefinitions Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">%(PreprocessorDefinitions)</PreprocessorDefinitions>
@@ -302,8 +280,6 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Source\audio.h" />
-    <ClInclude Include="Source\CBall.h" />
-    <ClInclude Include="Source\CBouncingBall.h" />
     <ClInclude Include="Source\CEraser.h" />
     <ClInclude Include="Source\CGameStateInit.h" />
     <ClInclude Include="Source\CGameStateOver.h" />
@@ -311,6 +287,7 @@
     <ClInclude Include="Source\game.h" />
     <ClInclude Include="Source\gameDoc.h" />
     <ClInclude Include="Source\gameView.h" />
+    <ClInclude Include="Source\InitalPageMenu.h" />
     <ClInclude Include="Source\MainFrm.h" />
     <ClInclude Include="Source\Resource.h" />
     <ClInclude Include="Source\StdAfx.h" />
@@ -325,8 +302,14 @@
   </ItemGroup>
   <ItemGroup>
     <Image Include="..\..\OOPL_bg\InitPage_1.bmp" />
-    <Image Include="res\bitmap4.bmp" />
+    <Image Include="..\..\OOP_game\game4.10\RES\InitPage_1.bmp" />
+    <Image Include="res\bitmap10.bmp" />
+    <Image Include="RES\inital_btn_setting.bmp" />
+    <Image Include="RES\inital_btn_setting2.bmp" />
+    <Image Include="RES\inital_btn_start.bmp" />
+    <Image Include="RES\inital_btn_start2.bmp" />
     <Image Include="RES\InitPage_1.bmp" />
+    <Image Include="RES\MENU_CLIP_BOX.bmp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
