fix: Fixing button error and picture.
Fixing button select mode between mouse and keyboard cause feature error

--- a/game4.10/game.vcxproj.filters
+++ b/game4.10/game.vcxproj.filters
@@ -144,5 +144,14 @@
     <Image Include="RES\MENU_CLIP_BOX.bmp">
       <Filter>Resource Files</Filter>
     </Image>
+    <Image Include="res\bitmap11.bmp">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="RES\quit2.bmp">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="RES\quit1.bmp">
+      <Filter>Resource Files</Filter>
+    </Image>
   </ItemGroup>
 </Project>
