--- a/game4.10/game.vcxproj
+++ b/game4.10/game.vcxproj
@@ -304,12 +304,15 @@
     <Image Include="..\..\OOPL_bg\InitPage_1.bmp" />
     <Image Include="..\..\OOP_game\game4.10\RES\InitPage_1.bmp" />
     <Image Include="res\bitmap10.bmp" />
+    <Image Include="res\bitmap11.bmp" />
     <Image Include="RES\inital_btn_setting.bmp" />
     <Image Include="RES\inital_btn_setting2.bmp" />
     <Image Include="RES\inital_btn_start.bmp" />
     <Image Include="RES\inital_btn_start2.bmp" />
     <Image Include="RES\InitPage_1.bmp" />
     <Image Include="RES\MENU_CLIP_BOX.bmp" />
+    <Image Include="RES\quit1.bmp" />
+    <Image Include="RES\quit2.bmp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
