--- a/game4.10/game.vcxproj
+++ b/game4.10/game.vcxproj
@@ -108,7 +108,7 @@
       <ObjectFileName>.\Debug/</ObjectFileName>
       <ProgramDataBaseFileName>.\Debug/</ProgramDataBaseFileName>
       <WarningLevel>Level3</WarningLevel>
-      <TreatWarningAsError>true</TreatWarningAsError>
+      <TreatWarningAsError>false</TreatWarningAsError>
       <SuppressStartupBanner>true</SuppressStartupBanner>
       <DebugInformationFormat>EditAndContinue</DebugInformationFormat>
     </ClCompile>
@@ -241,6 +241,7 @@
     <ClCompile Include="Source\CGameStateInit.cpp" />
     <ClCompile Include="Source\CGameStateOver.cpp" />
     <ClCompile Include="Source\CGameStateRun.cpp" />
+    <ClCompile Include="Source\Character.cpp" />
     <ClCompile Include="Source\game.cpp">
       <PreprocessorDefinitions Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <PreprocessorDefinitions Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">%(PreprocessorDefinitions)</PreprocessorDefinitions>
@@ -284,6 +285,7 @@
     <ClInclude Include="Source\CGameStateInit.h" />
     <ClInclude Include="Source\CGameStateOver.h" />
     <ClInclude Include="Source\CGameStateRun.h" />
+    <ClInclude Include="Source\Character.h" />
     <ClInclude Include="Source\game.h" />
     <ClInclude Include="Source\gameDoc.h" />
     <ClInclude Include="Source\gameView.h" />
@@ -311,6 +313,20 @@
     <Image Include="RES\inital_btn_start2.bmp" />
     <Image Include="RES\InitPage_1.bmp" />
     <Image Include="RES\MENU_CLIP_BOX.bmp" />
+    <Image Include="res\player1_0.bmp" />
+    <Image Include="res\player1_1.bmp" />
+    <Image Include="RES\player1_10.bmp" />
+    <Image Include="RES\player1_11.bmp" />
+    <Image Include="RES\player1_12.bmp" />
+    <Image Include="RES\player1_13.bmp" />
+    <Image Include="RES\player1_14.bmp" />
+    <Image Include="RES\player1_15.bmp" />
+    <Image Include="res\player1_2.bmp" />
+    <Image Include="res\player1_3.bmp" />
+    <Image Include="res\player1_4.bmp" />
+    <Image Include="res\player1_5.bmp" />
+    <Image Include="res\player1_6.bmp" />
+    <Image Include="res\player1_7.bmp" />
     <Image Include="RES\quit1.bmp" />
     <Image Include="RES\quit2.bmp" />
   </ItemGroup>
