--- a/game4.10/game.vcxproj.filters
+++ b/game4.10/game.vcxproj.filters
@@ -246,5 +246,8 @@
     <Image Include="RES\black.bmp">
       <Filter>Resource Files</Filter>
     </Image>
+    <Image Include="..\..\OOPL_bg\ui\CM1.bmp">
+      <Filter>Resource Files</Filter>
+    </Image>
   </ItemGroup>
 </Project>
