--- a/game4.10/game.vcxproj
+++ b/game4.10/game.vcxproj
@@ -308,6 +308,10 @@
     <Image Include="..\..\OOPL_bg\InitPage_1.bmp" />
     <Image Include="..\..\OOPL_bg\ui\CM1.bmp" />
     <Image Include="..\..\OOP_game\game4.10\RES\InitPage_1.bmp" />
+    <Image Include="RES\0.bmp" />
+    <Image Include="RES\1.bmp" />
+    <Image Include="RES\2.bmp" />
+    <Image Include="RES\3.bmp" />
     <Image Include="res\bitmap10.bmp" />
     <Image Include="res\bitmap11.bmp" />
     <Image Include="res\bitmap13.bmp" />
@@ -320,8 +324,11 @@
     <Image Include="RES\CM5.bmp" />
     <Image Include="RES\CMA.bmp" />
     <Image Include="RES\CMA2.bmp" />
+    <Image Include="RES\Firzen.bmp" />
     <Image Include="RES\firzen_f.bmp" />
+    <Image Include="RES\Freeze.bmp" />
     <Image Include="RES\freeze_f.bmp" />
+    <Image Include="RES\Henry.bmp" />
     <Image Include="RES\henry_f.bmp" />
     <Image Include="RES\inital_btn_setting.bmp" />
     <Image Include="RES\inital_btn_setting2.bmp" />
