--- a/game4.10/game.vcxproj.filters
+++ b/game4.10/game.vcxproj.filters
@@ -210,6 +210,23 @@
     <Image Include="res\player1_7.bmp" />
     <Image Include="RES\quit1.bmp" />
     <Image Include="RES\quit2.bmp" />
+    <Image Include="RES\lf\m_test.bmp" />
+    <Image Include="RES\lf\m_test2.bmp" />
+    <Image Include="RES\lf\t_test.bmp" />
+    <Image Include="RES\lf\t_test2.bmp" />
+    <Image Include="RES\lf\forestm1.bmp" />
+    <Image Include="RES\lf\forestm2.bmp" />
+    <Image Include="RES\lf\forestm3.bmp" />
+    <Image Include="RES\lf\forestm4.bmp" />
+    <Image Include="RES\lf\forests.bmp" />
+    <Image Include="RES\lf\forestt.bmp" />
+    <Image Include="RES\lf\land1.bmp" />
+    <Image Include="RES\lf\land2.bmp" />
+    <Image Include="RES\lf\land3.bmp" />
+    <Image Include="RES\lf\land4.bmp" />
+    <Image Include="RES\lf\s.bmp" />
+    <Image Include="RES\lf\iftest.bmp" />
+    <Image Include="RES\lf\green.bmp" />
   </ItemGroup>
   <ItemGroup>
     <None Include="RES\continue.bmp" />
