--- a/game4.10/game.vcxproj
+++ b/game4.10/game.vcxproj
@@ -22,26 +22,26 @@
     <ProjectGuid>{DDD280D7-4B85-4B03-BBC4-C46CA9BECCCB}</ProjectGuid>
     <RootNamespace>game</RootNamespace>
     <Keyword>MFCProj</Keyword>
-    <WindowsTargetPlatformVersion>10.0.17763.0</WindowsTargetPlatformVersion>
+    <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='UnitTest|Win32'" Label="Configuration">
     <ConfigurationType>Application</ConfigurationType>
     <UseOfMfc>Dynamic</UseOfMfc>
-    <PlatformToolset>v141</PlatformToolset>
+    <PlatformToolset>v143</PlatformToolset>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'" Label="Configuration">
     <ConfigurationType>Application</ConfigurationType>
     <UseOfMfc>Dynamic</UseOfMfc>
-    <PlatformToolset>v141</PlatformToolset>
+    <PlatformToolset>v143</PlatformToolset>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
     <ConfigurationType>Application</ConfigurationType>
     <UseOfMfc>Dynamic</UseOfMfc>
-    <PlatformToolset>v141</PlatformToolset>
+    <PlatformToolset>v143</PlatformToolset>
   </PropertyGroup>
   <PropertyGroup Label="Configuration" Condition="'$(Configuration)|$(Platform)'=='Template|Win32'">
-    <PlatformToolset>v141</PlatformToolset>
+    <PlatformToolset>v143</PlatformToolset>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.props" />
   <ImportGroup Label="ExtensionSettings">
@@ -312,6 +312,7 @@
     <Image Include="..\..\OOPL_bg\InitPage_1.bmp" />
     <Image Include="..\..\OOPL_bg\ui\CM1.bmp" />
     <Image Include="..\..\OOP_game\game4.10\RES\InitPage_1.bmp" />
+    <Image Include="..\素材\CHARMENU_3.bmp" />
     <Image Include="RES\0.bmp" />
     <Image Include="RES\1.bmp" />
     <Image Include="RES\2.bmp" />
@@ -441,6 +442,8 @@
     <Image Include="RES\Freeze\Freeze_0\freeze_0_62.bmp" />
     <Image Include="RES\Freeze\Freeze_0\freeze_0_7.bmp" />
     <Image Include="res\freeze\freeze_0_reverse\bitmap33.bmp" />
+    <Image Include="res\freeze\freeze_0_reverse\bitmap41.bmp" />
+    <Image Include="res\freeze\freeze_0_reverse\bitmap42.bmp" />
     <Image Include="RES\Freeze\Freeze_0_reverse\freeze_0_reverse_10.bmp" />
     <Image Include="RES\Freeze\Freeze_0_reverse\freeze_0_reverse_11.bmp" />
     <Image Include="RES\Freeze\Freeze_0_reverse\freeze_0_reverse_12.bmp" />
