--- a/game4.10/game.vcxproj.filters
+++ b/game4.10/game.vcxproj.filters
@@ -475,6 +475,9 @@
     <Image Include="res\player1_7.bmp" />
     <Image Include="RES\quit1.bmp" />
     <Image Include="RES\quit2.bmp" />
+    <Image Include="res\freeze\freeze_0_reverse\bitmap41.bmp" />
+    <Image Include="res\freeze\freeze_0_reverse\bitmap42.bmp" />
+    <Image Include="..\素材\CHARMENU_3.bmp" />
   </ItemGroup>
   <ItemGroup>
     <None Include="RES\continue.bmp" />
