--- a/game4.10/game.vcxproj.filters
+++ b/game4.10/game.vcxproj.filters
@@ -475,6 +475,14 @@
     <Image Include="res\player1_7.bmp" />
     <Image Include="RES\quit1.bmp" />
     <Image Include="RES\quit2.bmp" />
+    <Image Include="RES\FRAME.bmp" />
+    <Image Include="RES\PAUSE.bmp" />
+    <Image Include="RES\HealthBar.bmp" />
+    <Image Include="RES\red.bmp" />
+    <Image Include="RES\Firzen\firzen_s.bmp" />
+    <Image Include="RES\Freeze\freeze_s.bmp" />
+    <Image Include="RES\Henry\henry_s.bmp" />
+    <Image Include="RES\Player0\s.bmp" />
   </ItemGroup>
   <ItemGroup>
     <None Include="RES\continue.bmp" />
