--- a/game4.10/game.vcxproj.filters
+++ b/game4.10/game.vcxproj.filters
@@ -7,22 +7,20 @@
     <ClCompile Include="Source\CGameStateOver.cpp" />
     <ClCompile Include="Source\CGameStateRun.cpp" />
     <ClCompile Include="Source\Character.cpp" />
+    <ClCompile Include="Source\CharacterAnimation.cpp" />
     <ClCompile Include="Source\game.cpp" />
     <ClCompile Include="Source\gameDoc.cpp" />
+    <ClCompile Include="Source\GameObject.cpp" />
     <ClCompile Include="Source\gameView.cpp" />
+    <ClCompile Include="Source\HealthBar.cpp" />
     <ClCompile Include="Source\InitalPageMenu.cpp" />
     <ClCompile Include="Source\MainFrm.cpp" />
+    <ClCompile Include="Source\Map.cpp" />
     <ClCompile Include="Source\MapGenerator.cpp" />
     <ClCompile Include="Source\SelCharacterConfig.cpp" />
     <ClCompile Include="Source\StdAfx.cpp" />
     <ClCompile Include="Source\gamelib.cpp" />
-    <ClCompile Include="Source\HealthBar.cpp" />
-<<<<<<< HEAD
-    <ClCompile Include="Source\CharacterAnimation.cpp" />
-=======
-    <ClCompile Include="Source\Map.cpp" />
-    <ClCompile Include="Source\GameObject.cpp" />
->>>>>>> cf418fa7cc3413431111296508f76fb6b831125b
+    <ClCompile Include="Source\Skills.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Source\audio.h" />
@@ -31,23 +29,21 @@
     <ClInclude Include="Source\CGameStateOver.h" />
     <ClInclude Include="Source\CGameStateRun.h" />
     <ClInclude Include="Source\Character.h" />
+    <ClInclude Include="Source\CharacterAnimation.h" />
     <ClInclude Include="Source\game.h" />
     <ClInclude Include="Source\gameDoc.h" />
+    <ClInclude Include="Source\GameObject.h" />
     <ClInclude Include="Source\gameView.h" />
+    <ClInclude Include="Source\HealthBar.h" />
     <ClInclude Include="Source\InitalPageMenu.h" />
     <ClInclude Include="Source\MainFrm.h" />
+    <ClInclude Include="Source\Map.h" />
     <ClInclude Include="Source\MapGenerator.h" />
     <ClInclude Include="Source\Resource.h" />
     <ClInclude Include="Source\SelCharacterConfig.h" />
     <ClInclude Include="Source\StdAfx.h" />
     <ClInclude Include="Source\gamelib.h" />
-    <ClInclude Include="Source\HealthBar.h" />
-<<<<<<< HEAD
-    <ClInclude Include="Source\CharacterAnimation.h" />
-=======
-    <ClInclude Include="Source\Map.h" />
-    <ClInclude Include="Source\GameObject.h" />
->>>>>>> cf418fa7cc3413431111296508f76fb6b831125b
+    <ClInclude Include="Source\Skills.h" />
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="Source\game.rc" />
@@ -56,6 +52,7 @@
     <Image Include="..\..\OOPL_bg\InitPage_1.bmp" />
     <Image Include="..\..\OOPL_bg\ui\CM1.bmp" />
     <Image Include="..\..\OOP_game\game4.10\RES\InitPage_1.bmp" />
+    <Image Include="..\素材\CHARMENU_3.bmp" />
     <Image Include="RES\0.bmp" />
     <Image Include="RES\1.bmp" />
     <Image Include="RES\2.bmp" />
@@ -67,6 +64,7 @@
     <Image Include="res\bitmap34.bmp" />
     <Image Include="RES\black.bmp" />
     <Image Include="RES\CHARMENU.bmp" />
+    <Image Include="res\CHARMENU_3.bmp" />
     <Image Include="RES\CM1.bmp" />
     <Image Include="RES\CM2.bmp" />
     <Image Include="RES\CM3.bmp" />
@@ -145,6 +143,7 @@
     <Image Include="RES\Firzen\Firzen_0_reverse\firzen_0_reverse_7.bmp" />
     <Image Include="RES\Firzen\Firzen_0_reverse\firzen_0_reverse_8.bmp" />
     <Image Include="RES\Firzen\Firzen_0_reverse\firzen_0_reverse_9.bmp" />
+    <Image Include="RES\Firzen\firzen_s.bmp" />
     <Image Include="RES\firzen_f.bmp" />
     <Image Include="RES\Freeze.bmp" />
     <Image Include="RES\Freeze\Freeze_0\freeze_0_0.bmp" />
@@ -185,6 +184,9 @@
     <Image Include="RES\Freeze\Freeze_0\freeze_0_62.bmp" />
     <Image Include="RES\Freeze\Freeze_0\freeze_0_7.bmp" />
     <Image Include="res\freeze\freeze_0_reverse\bitmap33.bmp" />
+    <Image Include="res\freeze\freeze_0_reverse\bitmap41.bmp" />
+    <Image Include="res\freeze\freeze_0_reverse\bitmap42.bmp" />
+    <Image Include="res\freeze\freeze_0_reverse\bitmap43.bmp" />
     <Image Include="RES\Freeze\Freeze_0_reverse\freeze_0_reverse_10.bmp" />
     <Image Include="RES\Freeze\Freeze_0_reverse\freeze_0_reverse_11.bmp" />
     <Image Include="RES\Freeze\Freeze_0_reverse\freeze_0_reverse_12.bmp" />
@@ -223,7 +225,9 @@
     <Image Include="RES\Freeze\Freeze_0_reverse\freeze_0_reverse_7.bmp" />
     <Image Include="RES\Freeze\Freeze_0_reverse\freeze_0_reverse_8.bmp" />
     <Image Include="RES\Freeze\Freeze_0_reverse\freeze_0_reverse_9.bmp" />
+    <Image Include="RES\Freeze\freeze_s.bmp" />
     <Image Include="RES\freeze_f.bmp" />
+    <Image Include="RES\HealthBar.bmp" />
     <Image Include="RES\Henry.bmp" />
     <Image Include="RES\Henry\Henry_0\henry_0_0.bmp" />
     <Image Include="RES\Henry\Henry_0\henry_0_1.bmp" />
@@ -293,12 +297,14 @@
     <Image Include="RES\Henry\Henry_0_reverse\henry_0_reverse_7.bmp" />
     <Image Include="RES\Henry\Henry_0_reverse\henry_0_reverse_8.bmp" />
     <Image Include="RES\Henry\Henry_0_reverse\henry_0_reverse_9.bmp" />
+    <Image Include="RES\Henry\henry_s.bmp" />
     <Image Include="RES\henry_f.bmp" />
     <Image Include="RES\inital_btn_setting.bmp" />
     <Image Include="RES\inital_btn_setting2.bmp" />
     <Image Include="RES\inital_btn_start.bmp" />
     <Image Include="RES\inital_btn_start2.bmp" />
     <Image Include="RES\InitPage_1.bmp" />
+    <Image Include="RES\lf\backscene_forest.bmp" />
     <Image Include="RES\lf\forestm1.bmp" />
     <Image Include="RES\lf\forestm2.bmp" />
     <Image Include="RES\lf\forestm3.bmp" />
@@ -405,6 +411,7 @@
     <Image Include="RES\Player0\player0_reverse\player0_re_7.bmp" />
     <Image Include="RES\Player0\player0_reverse\player0_re_8.bmp" />
     <Image Include="RES\Player0\player0_reverse\player0_re_9.bmp" />
+    <Image Include="RES\Player0\s.bmp" />
     <Image Include="res\Player1\Player1_Normal\player1_0.bmp" />
     <Image Include="res\Player1\Player1_Normal\player1_1.bmp" />
     <Image Include="res\Player1\Player1_Normal\player1_10.bmp" />
@@ -487,18 +494,7 @@
     <Image Include="res\player1_7.bmp" />
     <Image Include="RES\quit1.bmp" />
     <Image Include="RES\quit2.bmp" />
-    <Image Include="res\freeze\freeze_0_reverse\bitmap41.bmp" />
-    <Image Include="res\freeze\freeze_0_reverse\bitmap42.bmp" />
-    <Image Include="..\素材\CHARMENU_3.bmp" />
-    <Image Include="RES\HealthBar.bmp" />
     <Image Include="RES\red.bmp" />
-    <Image Include="res\CHARMENU_3.bmp" />
-    <Image Include="RES\Firzen\firzen_s.bmp" />
-    <Image Include="RES\Freeze\freeze_s.bmp" />
-    <Image Include="RES\Henry\henry_s.bmp" />
-    <Image Include="RES\Player0\s.bmp" />
-    <Image Include="res\freeze\freeze_0_reverse\bitmap43.bmp" />
-    <Image Include="RES\lf\backscene_forest.bmp" />
   </ItemGroup>
   <ItemGroup>
     <None Include="RES\continue.bmp" />
