Add Henry & Woody Skill Animation Fix Henry Skill

--- a/game4.10/game.vcxproj
+++ b/game4.10/game.vcxproj
@@ -766,6 +766,7 @@
     <Image Include="RES\quit1.bmp" />
     <Image Include="RES\quit2.bmp" />
     <Image Include="RES\red.bmp" />
+    <Image Include="RES\Woody.bmp" />
     <Image Include="RES\Woody\woody_f.bmp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
