--- a/game4.10/game.vcxproj.filters
+++ b/game4.10/game.vcxproj.filters
@@ -499,6 +499,7 @@
     <Image Include="RES\red.bmp" />
     <Image Include="RES\Henry\henry_f.bmp" />
     <Image Include="RES\Woody\woody_f.bmp" />
+    <Image Include="RES\Woody.bmp" />
   </ItemGroup>
   <ItemGroup>
     <None Include="RES\continue.bmp" />
