--- a/game4.10/game.vcxproj
+++ b/game4.10/game.vcxproj
@@ -243,6 +243,7 @@
     <ClCompile Include="Source\CGameStateRun.cpp" />
     <ClCompile Include="Source\Character.cpp" />
     <ClCompile Include="Source\CharacterAnimation.cpp" />
+    <ClCompile Include="Source\FieldObject.cpp" />
     <ClCompile Include="Source\Freeze.cpp" />
     <ClCompile Include="Source\game.cpp">
       <PreprocessorDefinitions Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">%(PreprocessorDefinitions)</PreprocessorDefinitions>
@@ -290,6 +291,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="MapConfiguration.h" />
+    <ClInclude Include="ShowedObject.h" />
     <ClInclude Include="Source\audio.h" />
     <ClInclude Include="Source\CEraser.h" />
     <ClInclude Include="Source\CGameStateInit.h" />
@@ -297,6 +299,7 @@
     <ClInclude Include="Source\CGameStateRun.h" />
     <ClInclude Include="Source\Character.h" />
     <ClInclude Include="Source\CharacterAnimation.h" />
+    <ClInclude Include="Source\FieldObject.h" />
     <ClInclude Include="Source\game.h" />
     <ClInclude Include="Source\gameDoc.h" />
     <ClInclude Include="Source\GameObject.h" />
